nullaway_error_2484DD91-E6E6-4DF5-BCA6-10A53471E160.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/PropertyEditorRegistrySupport.java:195: error: [NullAway] dereferenced expression this.defaultEditors is @Nullable
		return this.defaultEditors.get(requiredType);
		                          ^
    (see http://t.uber.com/nullaway )
